--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,7 +6,14 @@
   <title>Grace Crevasse Lab 1</title>
 </head>
 <body>
-  
+    <div>
+    <header>
+      Grace Crevasse Lab 1
+    </header>
+    </div>
+    <div>
+
+    </div>
 </body>
 </html>
 
