fixed my name ?

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
     <header>
-      Grace Crevasse Lab 1
+      <h1>Grace Crevasse Lab 1</h1>
     </header>
     </div>
     <div>
