--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <div>
-    <header>
-      <h1>Grace Crevasse Lab 1</h1>
-    </header>
+      <header><h1>Grace Crevasse Lab 1</h1></header>
+      <div>
+        <div></div>
+        <div></div>
+      </div>
+
     </div>
     <div>
-
+      <footer><a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">UMD??</a></footer>
     </div>
 </body>
 </html>
