added album names

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -9,13 +9,20 @@
     <div>
       <header><h1>Grace Crevasse Lab 1</h1></header>
       <div>
-        <div></div>
+        <div><h3>Album Names</h3></div>
+        <ol>
+          <li>1989 - Taylor Swift</li>
+          <li>Blue Bannisters - Lana Del Rey</li>
+          <li>Folklore - Taylor Swift</li>
+          <li>Fuzzybrain - Dayglow</li>
+          <li>Norman F*****g Rockwell! - Lana Del Rey</li>
+        </ol>
         <div></div>
       </div>
 
     </div>
     <div>
-      <footer><a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">UMD??</a></footer>
+      <footer><a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a></footer>
     </div>
 </body>
 </html>
