adding an image maybe?

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -17,7 +17,8 @@
           <li>Fuzzybrain - Dayglow</li>
           <li>Norman F*****g Rockwell! - Lana Del Rey</li>
         </ol>
-        <div></div>
+        <div><h3>Wholesome Images</h3></div>
+          <img src="desktop/motivation1.jpeg" alt="">
       </div>
 
     </div>
