adding my images

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -17,8 +17,8 @@
           <li>Fuzzybrain - Dayglow</li>
           <li>Norman F*****g Rockwell! - Lana Del Rey</li>
         </ol>
-        <div><h3>Wholesome Images</h3></div>
-          <img src="desktop/motivation1.jpeg" alt="">
+        <div><h3>Image Carosel</h3></div>
+          <img src="images/mochi.jpg" alt="">
       </div>
 
     </div>
