adding all images

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -19,6 +19,9 @@
         </ol>
         <div><h3>Image Carosel</h3></div>
           <img src="images/mochi.jpg" alt="">
+          <img src="images/mochi.gif" alt="">
+          <img src="images/mochi.png" alt="">
+          <img src="images/mochi.svg" alt="">
       </div>
 
     </div>
