--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -22,7 +22,7 @@
           <img src="images/mochi.gif" width="75" alt="A mochi gif">
           <img src="images/mochi.png" width="75" alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
-        <p>These are four images of mochi in varying picture formats.</p>
+        <div><p>These are four images of mochi in varying picture formats.</p></div>
       </div>
 
     </div>
