fixing the footer

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -18,17 +18,16 @@
           <li>Norman F*****g Rockwell! - Lana Del Rey</li>
         </ol>
         <div><h3>Image Carosel</h3></div>
-          <img src="images/mochi.jpg" width="75" alt="A mochi jpg">
-          <img src="images/mochi.gif" width="75" alt="A mochi gif">
-          <img src="images/mochi.png" width="75" alt="A mochi png">
+          <img src="images/mochi.jpg"  alt="A mochi jpg">
+          <img src="images/mochi.gif"  alt="A mochi gif">
+          <img src="images/mochi.png"  alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
         <div><p>These are four images of mochi in varying picture formats.</p></div>
       </div>
 
     </div>
     <div>
-      <p>Gcrevasse</p>
-      <footer><a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a></footer>
+      <footer>Gcrevasse<a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a></footer>
     </div>
 </body>
 </html>
