--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-      <header><h1>Grace Crevasse Lab 1</h1></header>
+      <header><h1>Grace Crevasse's Labs For INST377</h1></header>
       <div>
         <div><h3>Album Names</h3></div>
         <ol>
@@ -17,7 +17,7 @@
           <li>Fuzzybrain - Dayglow</li>
           <li>Norman F*****g Rockwell! - Lana Del Rey</li>
         </ol>
-        <div><h3>Image Carosel</h3></div>
+        <div><h3>Image Carousel</h3></div>
           <img src="images/mochi.jpg"  alt="A mochi jpg">
           <img src="images/mochi.gif"  alt="A mochi gif">
           <img src="images/mochi.png"  alt="A mochi png">
