--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -26,8 +27,6 @@
       </div>
 
     </div>
-    <div>
       <footer>Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a></footer>
-    </div>
 </body>
 </html>
