--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,3 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grace Crevasse Lab 1</title>
+  <link rel='stylesheet' href='style.css'/>
+</head>
+<body>
+    <div>
+      <header><h1>Grace Crevasse's Labs For INST377</h1></header>
+      <div>
+        <div><h3>Album Names</h3></div>
+        <ol>
+          <li>1989 - Taylor Swift</li>
+          <li>Blue Bannisters - Lana Del Rey</li>
+          <li>Folklore - Taylor Swift</li>
+          <li>Fuzzybrain - Dayglow</li>
+          <li>Norman F*****g Rockwell! - Lana Del Rey</li>
+        </ol>
+        <div><h3>Image Carousel</h3></div>
+          <img src="images/mochi.jpg"  alt="A mochi jpg">
+          <img src="images/mochi.gif"  alt="A mochi gif">
+          <img src="images/mochi.png"  alt="A mochi png">
+          <img src="images/mochi.svg" alt="A mochi SVG">
+        <div><p>These are four images of mochi in varying picture formats.</p></div>
+      </div>
+      <footer>Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a></footer>
+    </div>
+</body>
+</html>
+
+
 Replace this with your complete HTML from Lab 1
 
 Hook it up to CSS by including style.css in the <head> tag
