--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
       <header><h1>Grace Crevasse's Labs For INST377</h1></header>
-      <div class="containerad">
+      <div class="container">
         <div><h3>Album Names</h3></div>
         <ol>
           <li>1989 - Taylor Swift</li>
