--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -11,20 +11,26 @@
     <div class="wrapper">
       <header><h1>Grace Crevasse's Labs For INST377</h1></header>
       <div class="container">
-        <div><h3>Album Names</h3></div>
-        <ol>
-          <li>1989 - Taylor Swift</li>
-          <li>Blue Bannisters - Lana Del Rey</li>
-          <li>Folklore - Taylor Swift</li>
-          <li>Fuzzybrain - Dayglow</li>
-          <li>Norman F*****g Rockwell! - Lana Del Rey</li>
-        </ol>
-        <div><h3>Image Carousel</h3></div>
+        <div>
+          <h3>Album Names</h3>
+          <ol>
+            <li>1989 - Taylor Swift</li>
+            <li>Blue Bannisters - Lana Del Rey</li>
+            <li>Folklore - Taylor Swift</li>
+            <li>Fuzzybrain - Dayglow</li>
+            <li>Norman F*****g Rockwell! - Lana Del Rey</li>
+          </ol>
+      </div>
+        <div>
+          <h3>Image Carousel</h3>
+          <div>
           <img src="images/mochi.jpg"  alt="A mochi jpg">
           <img src="images/mochi.gif"  alt="A mochi gif">
           <img src="images/mochi.png"  alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
         <div><p>These are four images of mochi in varying picture formats.</p></div>
+        </div>
+        </div>
       </div>
       <footer>Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a></footer>
     </div>
