--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-      <header class="header"><h1>Grace Crevasse's Labs For INST377</h1></header>
+      <div class="header"><h1>Grace Crevasse's Labs For INST377</h1></div>
       <div class="container">
         <div>
           <h3>Album Names</h3>
