--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header class="header"><h1>Grace Crevasse's Labs For INST377</h1></header>
       <div class="container">
-        <div>
+        <div class="left_section">
           <h3>Album Names</h3>
           <ol>
             <li>1989 - Taylor Swift</li>
@@ -21,7 +21,7 @@
             <li>Norman F*****g Rockwell! - Lana Del Rey</li>
           </ol>
         </div>
-        <div>
+        <div class="right_section">
           <h3>Image Carousel</h3>
           <div>
           <img src="images/mochi.jpg"  alt="A mochi jpg">
