--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -21,9 +21,9 @@
             <li>Norman F*****g Rockwell! - Lana Del Rey</li>
           </ol>
         </div>
-        <div class="right_section box">
+        <div class="right_section box"> <!-- RIGHT SIDE-->
           <h3>Image Carousel</h3>
-          <div>
+          <div> <!-- Images box -->
           <img src="images/mochi.jpg"  alt="A mochi jpg">
           <img src="images/mochi.gif"  alt="A mochi gif">
           <img src="images/mochi.png"  alt="A mochi png">
@@ -32,8 +32,9 @@
         </div>
         </div>
       </div>
-      <footer>Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a></footer>
     </div>
+    <footer class="footer">Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
+    </footer>
 </body>
 </html>
 
