--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer">Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
+    <footer class="footer">Gcrevasse <a class="footer subtitle" href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
     </footer>
 </body>
 </html>
