idek what i did here hopefully it works

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="right_section box"> <!-- RIGHT SIDE-->
           <h3>Image Carousel</h3>
-          <div> <!-- Images box -->
+          <div class="grid"> <!-- Images box -->
           <img src="images/mochi.jpg"  alt="A mochi jpg">
           <img src="images/mochi.gif"  alt="A mochi gif">
           <img src="images/mochi.png"  alt="A mochi png">
