--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -28,7 +28,7 @@
           <img src="images/mochi.gif"  alt="A mochi gif">
           <img src="images/mochi.png"  alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
-          <div><p>These are four images of mochi in varying picture formats.</p></div>
+          <div class="subtitle"><p>These are four images of mochi in varying picture formats.</p></div>
         </div>
         </div>
       </div>
