--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -28,12 +28,14 @@
           <img src="images/mochi.gif"  alt="A mochi gif">
           <img src="images/mochi.png"  alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
-          <div class="subtitle"><p>These are four images of mochi in varying picture formats.</p></div>
+          <div class="subtitle">
+            These are four images of mochi in varying picture formats.</div>
         </div>
         </div>
       </div>
     </div>
-    <footer class="footer">Gcrevasse <a class="footer subtitle" href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
+    <footer class="footer subtitle">
+      Gcrevasse <a class="footer" href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
     </footer>
 </body>
 </html>
