pls im trying so hard

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -28,9 +28,10 @@
           <img src="images/mochi.gif"  alt="A mochi gif">
           <img src="images/mochi.png"  alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
-          <div class="subtitle">
-            These are four images of mochi in varying picture formats.</div>
         </div>
+          <div class="subtitle">
+            These are four images of mochi in varying picture formats.
+          </div>
         </div>
       </div>
     </div>
