--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <footer class="footer subtitle">
-      Gcrevasse <a class="footer" href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
+      Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
     </footer>
 </body>
 </html>
