adding box to subtitle

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -29,7 +29,7 @@
           <img src="images/mochi.png"  alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
         </div>
-          <div class="subtitle">
+          <div class="box">
             These are four images of mochi in varying picture formats.
           </div>
         </div>
