adding box to ol?

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -13,7 +13,8 @@
       <div class="container">
         <div class="left_section box">
           <h3>Album Names</h3>
-          <ol>
+          
+          <ol class="box">
             <li>1989 - Taylor Swift</li>
             <li>Blue Bannisters - Lana Del Rey</li>
             <li>Folklore - Taylor Swift</li>
@@ -40,15 +41,3 @@
     </footer>
 </body>
 </html>
-
-
-Replace this with your complete HTML from Lab 1
-
-Hook it up to CSS by including style.css in the <head> tag
-
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
-
-You should not need to edit the CSS to do this, only the HTML.
-
-Don't forget to add an actual set of image descriptions to your image carousel.
