updating mochi description

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -30,7 +30,10 @@
           <img src="images/mochi.svg" alt="A mochi SVG">
         </div>
           <div class="box">
-            These are four images of mochi in varying picture formats.
+            These are four images of mochi in varying picture formats. The top left 
+            looks like it has a bubble around it. The top right is a bouncing
+            mochi gif. The bottom left is pretty standard. The bottom right
+            look like it has vectors around the edges.
           </div>
         </div>
       </div>
