--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,5 +1,46 @@
-<!--
-    Replace this with your working code from Lab 2, and include:
-    - The styles in this folder's `style.css`
-    - The script in script.js, which should be included via a `<script src="script.js" >` call before your closing </body> tag 
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grace Crevasse Lab 1</title>
+  <link rel='stylesheet' href='style.css'/>
+</head>
+<body>
+    <div class="wrapper">
+      <header class="header"><h1>Grace Crevasse's Labs For INST377</h1></header>
+      <div class="container">
+        <div class="left_section box">
+          <h2>Album Names</h2>
+          <ol class="box">
+            <li>1989 - Taylor Swift</li>
+            <li>Blue Bannisters - Lana Del Rey</li>
+            <li>Folklore - Taylor Swift</li>
+            <li>Fuzzybrain - Dayglow</li>
+            <li>Norman F*****g Rockwell! - Lana Del Rey</li>
+          </ol>
+        </div>
+        <div class="right_section box"> <!-- RIGHT SIDE-->
+          <h2>Image Carousel</h2>
+          <div class="grid"> <!-- Images box -->
+          <img src="images/mochi.jpg"  alt="A mochi jpg">
+          <img src="images/mochi.gif"  alt="A mochi gif">
+          <img src="images/mochi.png"  alt="A mochi png">
+          <img src="images/mochi.svg" alt="A mochi SVG">
+        </div>
+          <div class="box">
+            These are four images of mochi in varying picture formats. The top left 
+            looks like it has a bubble around it. The top right is a bouncing
+            mochi gif. The bottom left is pretty standard. The bottom right
+            look like it has vectors around the edges.
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer subtitle">
+      Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
+    </footer>
+    <script src="script.js" ></script>
+</body>
+</html>
