--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -24,9 +24,9 @@
         <div class="right_section box"> <!-- RIGHT SIDE-->
           <h2>Image Carousel</h2>
           <div class="grid"> <!-- Images box -->
-          <img src="images/mochi.jpg"  alt="A mochi jpg">
-          <img src="images/mochi.gif"  alt="A mochi gif">
-          <img src="images/mochi.png"  alt="A mochi png">
+          <img src="images/The-Seeker-30x30-WEB.jpeg"  alt="A mochi jpg">
+          <img src="images/Symbiosis-40x40+copy.jpeg"  alt="A mochi gif">
+          <img src="images/154.South-To-Cochise.jpg"  alt="A mochi png">
           <img src="images/mochi.svg" alt="A mochi SVG">
         </div>
           <div class="box">
