--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -27,7 +27,7 @@
           <img src="images/The-Seeker-30x30-WEB.jpeg"  alt="A mochi jpg">
           <img src="images/Symbiosis-40x40+copy.jpeg"  alt="A mochi gif">
           <img src="images/154.South-To-Cochise.jpg"  alt="A mochi png">
-          <img src="images/mochi.svg" alt="A mochi SVG">
+          <img src="images/Boys-Of-The-Landcopy.jpeg" alt="A mochi SVG">
         </div>
           <div class="box">
             These are four images of mochi in varying picture formats. The top left 
