--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -23,12 +23,14 @@
         </div>
         <div class="right_section box"> <!-- RIGHT SIDE-->
           <h2>Image Carousel</h2>
-          <div class="grid"> <!-- Images box -->
-          <img src="images/The-Seeker-30x30-WEB.jpeg"  alt="A mochi jpg">
-          <img src="images/Symbiosis-40x40+copy.jpeg"  alt="A mochi gif">
-          <img src="images/154.South-To-Cochise.jpg"  alt="A mochi png">
-          <img src="images/Boys-Of-The-Landcopy.jpeg" alt="A mochi SVG">
-        </div>
+          <div class="carousel">
+              <div class="slides"> <!-- Images box -->
+                <img src="images/The-Seeker-30x30-WEB.jpeg"  alt="A mochi jpg">
+                <img src="images/Symbiosis-40x40+copy.jpeg"  alt="A mochi gif">
+                <img src="images/154.South-To-Cochise.jpg"  alt="A mochi png">
+                <img src="images/Boys-Of-The-Landcopy.jpeg" alt="A mochi SVG">
+              </div>
+          </div>
           <div class="box">
             These are four images of mochi in varying picture formats. The top left 
             looks like it has a bubble around it. The top right is a bouncing
@@ -38,7 +40,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer subtitle">
+    <footer class="footer">
       Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
     </footer>
     <script src="script.js" ></script>
