--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -25,10 +25,10 @@
           <h2>Image Carousel</h2>
           <div class="carousel">
               <div class="slides"> <!-- Images box -->
-                <img src="images/The-Seeker-30x30-WEB.jpeg"  alt="A mochi jpg">
-                <img src="images/Symbiosis-40x40+copy.jpeg"  alt="A mochi gif">
-                <img src="images/154.South-To-Cochise.jpg"  alt="A mochi png">
-                <img src="images/Boys-Of-The-Landcopy.jpeg" alt="A mochi SVG">
+                <img src="images/The-Seeker-30x30-WEB.jpeg" width="75" alt="A mochi jpg">
+                <img src="images/Symbiosis-40x40+copy.jpeg" width="75" alt="A mochi gif">
+                <img src="images/154.South-To-Cochise.jpg" width="75" alt="A mochi png">
+                <img src="images/Boys-Of-The-Landcopy.jpeg" width="75" alt="A mochi SVG">
               </div>
           </div>
           <div class="box">
