adding prev and next

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -24,12 +24,14 @@
         <div class="right_section box"> <!-- RIGHT SIDE-->
           <h2>Image Carousel</h2>
           <div class="carousel">
+            <button class="prev">prev</button>
               <div class="slides"> <!-- Images box -->
                 <img id="slide_1" src="images/The-Seeker-30x30-WEB.jpeg" width="275" alt="A mochi jpg">
                 <img id="slide_2" src="images/Symbiosis-40x40+copy.jpeg" width="275" alt="A mochi gif">
                 <img id="slide_3" src="images/154.South-To-Cochise.jpg" width="275" alt="A mochi png">
                 <img id="slide_4" src="images/Boys-Of-The-Landcopy.jpeg" width="275" alt="A mochi SVG">
               </div>
+              <button class="next">next</button>
           </div>
           <div class="box">
             These are four images of mochi in varying picture formats. The top left 
