visible and hidden

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -26,10 +26,10 @@
           <div class="carousel">
             <button class="prev">prev</button>
               <div class="slides"> <!-- Images box -->
-                <div class="carousel_item"><img id="slide_1" src="images/The-Seeker-30x30-WEB.jpeg" width="150" alt="A mochi jpg"></div> 
-                <div class="carousel_item"><img id="slide_2" src="images/Symbiosis-40x40+copy.jpeg" width="150" alt="A mochi gif"></div>
-                <div class="carousel_item"><img id="slide_3" src="images/154.South-To-Cochise.jpg" width="150" alt="A mochi png"></div>
-                <div class="carousel_item"><img id="slide_4" src="images/Boys-Of-The-Landcopy.jpeg" width="150" alt="A mochi SVG"></div>
+                <div class="carousel_item visible"><img id="slide_1" src="images/The-Seeker-30x30-WEB.jpeg" width="150" alt="A mochi jpg"></div> 
+                <div class="carousel_item hidden><img id="slide_2" src="images/Symbiosis-40x40+copy.jpeg" width="150" alt="A mochi gif"></div>
+                <div class="carousel_item hidden"><img id="slide_3" src="images/154.South-To-Cochise.jpg" width="150" alt="A mochi png"></div>
+                <div class="carousel_item hidden"><img id="slide_4" src="images/Boys-Of-The-Landcopy.jpeg" width="150" alt="A mochi SVG"></div>
               </div>
               <button class="next">next</button>
           </div>
