--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -26,18 +26,15 @@
           <div class="carousel">
             <button class="prev">prev</button>
               <div class="slides"> <!-- Images box -->
-                <div class="carousel_item visible"><img id="slide_1" src="images/The-Seeker-30x30-WEB.jpeg" width="150" alt="A mochi jpg"></div> 
-                <div class="carousel_item hidden"><img id="slide_2" src="images/Symbiosis-40x40+copy.jpeg" width="150" alt="A mochi gif"></div>
-                <div class="carousel_item hidden"><img id="slide_3" src="images/154.South-To-Cochise.jpg" width="150" alt="A mochi png"></div>
-                <div class="carousel_item hidden"><img id="slide_4" src="images/Boys-Of-The-Landcopy.jpeg" width="150" alt="A mochi SVG"></div>
+                <div class="carousel_item visible"><img id="slide_1" src="images/The-Seeker-30x30-WEB.jpeg" width="150" alt="wild west painting"></div> 
+                <div class="carousel_item hidden"><img id="slide_2" src="images/Symbiosis-40x40+copy.jpeg" width="150" alt="wild west painting"></div>
+                <div class="carousel_item hidden"><img id="slide_3" src="images/154.South-To-Cochise.jpg" width="150" alt="wild west painting"></div>
+                <div class="carousel_item hidden"><img id="slide_4" src="images/Boys-Of-The-Landcopy.jpeg" width="150" alt="wild west painting"></div>
               </div>
               <button class="next">next</button>
           </div>
           <div class="box">
-            These are four images of mochi in varying picture formats. The top left 
-            looks like it has a bubble around it. The top right is a bouncing
-            mochi gif. The bottom left is pretty standard. The bottom right
-            look like it has vectors around the edges.
+            These are 4 portraits of the Old West by Mark Maggiori. Credit: https://www.markmaggiori.com/
           </div>
         </div>
       </div>
