--- a/client/Tetris/index.html
+++ b/client/Tetris/index.html
@@ -212,6 +212,17 @@
             <div></div>
             <div></div>
             <div></div>
+
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
+            <div class="taken"></div>
         </div>
     </body>
 </html>
