--- a/client/Tetris/index.html
+++ b/client/Tetris/index.html
@@ -12,7 +12,7 @@
         <button id="start-button">Start/Pause</button>
 
 
-        <div class="container"></div>
+        <div class="container">
             <div class="grid">
                 <div></div>
                 <div></div>
