--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -6,5 +6,31 @@
 <!-- Requirements -->
 <!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
 <!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Graces's Labs for INST377</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="wrapper">
+        <header class="header">
+            <h1>Grace C INST377 Labs</h1>
+        </header>
+        <div class="container">
+            <div class="left_section"></div>
+            <div class="right_section">
+                <h3>Local Restaurants</h3>
+                <div class="restaurant_list">
+                    A list of local restaurants
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 <!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
+
