--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -21,14 +21,15 @@
         <h1>Grace C INST377 Labs</h1>
       </header>
       <div class="container">
-        <div class="left_section">
+        <div class="left_section box">
+            <h3>Form Inputs</h3>
           <form action="/api">
             <label for="resto"></label>
             <input type="text" name="resto" id="resto" />
             <button type="submit">Submit</button>
           </form>
         </div>
-        <div class="right_section">
+        <div class="right_section box">
           <h3>Local Restaurants</h3>
           <div class="restaurant_list">A list of local restaurants</div>
         </div>
