--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -20,7 +20,7 @@
       <header class="header">
         <h1>Grace C INST377 Labs</h1>
       </header>
-      <div class="container">
+      <div class="container box">
         <div class="left_section box">
             <h3>Form Inputs</h3>
           <form action="/api">
