box on everything

--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
+      <header class="heade box">
         <h1>Grace C INST377 Labs</h1>
       </header>
       <div class="container box">
@@ -31,7 +31,7 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
-          <div class="restaurant_list">A list of local restaurants</div>
+          <div class="restaurant_list box">A list of local restaurants</div>
         </div>
       </div>
     </div>
