--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -20,10 +20,10 @@
       <header class="header">
         <h1>Grace C INST377 Labs</h1>
       </header>
-      <div class="container box">
+      <div class="container">
         <div class="left_section box">
             <h3>Form Inputs</h3>
-          <form action="/api">
+          <form action="/api" class="box">
             <label for="resto"></label>
             <input type="text" name="resto" id="resto" />
             <button type="submit">Submit</button>
