--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -17,9 +17,12 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header box">
-        <h1>Grace C INST377 Labs</h1>
-      </header>
+        <div class="box">
+            <header class="header">
+                <h1>Grace C INST377 Labs</h1>
+              </header>
+        </div>
+      
       <div class="container">
         <div class="left_section box">
             <h3>Form Inputs</h3>
