--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <div class="wrapper">
-        <div class="box">
-            <header class="header">
+        <div class="header">
+            <header class="box">
                 <h1>Grace C INST377 Labs</h1>
               </header>
         </div>
