--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="wrapper">
-        <header class="box header">
+        <header class="header box">
             <h1>Grace C INST377 Labs</h1>
          </header>
       <div class="container">
