--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -24,7 +24,7 @@
         <div class="left_section box">
             <h3>Form Inputs</h3>
           <form action="/api" class="box">
-            <label for="resto">Restaurant Name?</label>
+            <label for="resto">Restaurant Name</label>
             <input type="text" name="resto" id="resto" />
             <button type="submit">Submit</button>
           </form>
