--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -35,6 +35,9 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+        Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
+    </footer>
   </body>
 </html>
 <!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
