--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -21,7 +21,7 @@
             <h1>Grace C INST377 Labs</h1>
          </header>
       <div class="container">
-        <div class="left_section box">
+        <div class="left_section">
             <h3>Form Inputs</h3>
           <form action="/api" class="box">
             <label for="resto">Restaurant Name</label>
@@ -29,7 +29,7 @@
             <button type="submit">Submit</button>
           </form>
         </div>
-        <div class="right_section box">
+        <div class="right_section">
           <h3>Local Restaurants</h3>
           <div class="restaurant_list box">A list of local restaurants</div>
         </div>
