--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
-          <div class="restaurant_list box">A list of local restaurants</div>
+          <div class="restaurant_list box">A list of local restaurants from an API.</div>
         </div>
       </div>
     </div>
