--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -7,3 +7,41 @@
 
     Try placing it at the same level in your element tree as your Submit button
 -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Graces's Labs for INST377</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+        <header class="header">
+            <h1>Grace C INST377 Labs</h1>
+         </header>
+      <div class="container">
+        <div class="left_section box">
+            <h3>Form Inputs</h3>
+          <form action="/api" class="box main_form">
+            <div>
+                <label for="resto">Restaurant Name</label>
+                <input type="text" name="resto" id="resto" />
+            </div>
+            <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+            <button type="submit" id="get-resto">Submit</button>
+          </form>
+        </div>
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <div class="restaurant_list box">A list of local restaurants from an API.</div>
+        </div>
+      </div>
+      <footer class="footer">
+        Gcrevasse <a href="http://github.com/gcrevasse" target="_blank" rel="noopener noreferrer">Graces Github Account</a>
+        </footer>
+    </div>
+    <script src="./script.js"></script>
+  </body>
+</html>
