--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -35,7 +35,9 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
-          <div class="restaurant_list box">A list of local restaurants from an API.</div>
+          <div class="box" id="restaurant_list">
+            A list of local restaurants from an API.
+          </div>
         </div>
       </div>
       <footer class="footer">
